# rust-llvm-bug-20220112-minimal-example

./: Cargo.toml  README.md  x86_64-none-bare_metal.json
.cargo/: config.toml
src/: main.rs
