[package]
name = "kernel-bin"
description = """
A kernel binary that can be loaded as Multiboot2 payload by GRUB.
It works on x86_64 platforms with UEFI as firmware.
"""
version = "0.1.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11.2"
fontdue = { git = "https://github.com/mooman219/fontdue.git", default-features = false }
# AHH that's tricky/a pitfall. The GitHub version is newer and cleaned up the "simd"-feature
# but it was not yet released to crates.io. Therefore 0.6.2 from GitHub is different to
# 0.6.2 from crates.io.
#
# fontdue = { version = "0.6.2", default-features = false }
